# jufo2023

./: .gitignore  README.md  abstraction.py  board_code.py  filenames.py  index.html  interactive.py  load_model.py  main.py  pgn_to_input.py  stockfish_strength.py  test.py  test_model.py  train_eval_model.py  train_model.py  train_part_model.py  training.py
.github/workflows/: build-vue.yml
archive/: train_model.py
assets/: index.163c33fe.css  index.5cdff485.js  index.8590bf85.js  index.99f31237.css
frontend/: .gitignore  README.md  index.html  neural_input_output.js  package-lock.json  package.json  pnpm-lock.yaml  script.js  settings.js  style.css  tsconfig.json  vite.config.ts  vue.config.js
frontend/src/: App.vue  main.ts
frontend/src/chess/: boardHandlers.ts  game.ts  loadPieces.ts  minimax.ts  module-type.d.ts  status.ts
frontend/src/components/: Autoencoder.vue  CapturedPieces.vue  ChooseTheme.vue  (+9 more)
models/15mtrain-724neurons-4layers/: model.json
models/20mevaltrain-1024neurons-4layers/: model.json
models/20mevaltrain-1024neurons-5layers/: model.json
models/20mevaltrain-512neurons-4layers/: model.json
models/20mevaltrain-512neurons-5layers/: model.json
models/256-shallow-autoencoder/: model.json
models/50M-2048neurons/: model.json
models/50M-4096neurons/: model.json
models/complete-model/: model.json
models/ole-model/: model.json
old_frontend/: neural_input_output.js
pgn-to-numpy-rust/: Cargo.toml
pgn-to-numpy-rust/src/: common.rs  csv_to_numpy.rs  get_database.rs  intersperse.rs  main.rs  pgn_to_numpy.rs  pgn_to_numpy_eval.rs
(+18 files in other folders)
